force-app/main/default/objects/Contact/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This field only applies to Librarians.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Librarian</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Librarians</relationshipLabel>
    <relationshipName>Librarians</relationshipName>
    <type>Lookup</type>
</CustomField>