force-app/main/default/objects/Contact/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <inlineHelpText>What is the number on the Borrower&apos;s library card?</inlineHelpText>
    <label>Card Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>