force-app/main/default/objects/Contact/fields/Current_Loans__c.field-meta.xml
<CustomField>
    <fullName>Current_Loans__c</fullName>
    <inlineHelpText>How many loans does this borrower currently have out?</inlineHelpText>
    <label>Current Loans</label>
    <summaryFilterItems>
        <field>Loan__c.Returned__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan__c.Borrower__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>