force-app/main/default/objects/Contact/fields/Librarian_User__c.field-meta.xml
<CustomField>
    <fullName>Librarian_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Librarian User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User must be a librarian.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Librarian</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>LibrarianContacts</relationshipName>
    <type>Lookup</type>
</CustomField>