force-app/main/default/objects/Contact/recordTypes/Borrower.recordType-meta.xml
<RecordType>
    <fullName>Borrower</fullName>
    <active>true</active>
    <label>Borrower</label>
</RecordType>