force-app/main/default/objects/Contact/recordTypes/Librarian.recordType-meta.xml
<RecordType>
    <fullName>Librarian</fullName>
    <active>false</active>
    <label>Librarian</label>
</RecordType>